# bonsai-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SKILL.md  hello.txt
.claude/instincts/: amem-memory.md  context-compression.md  dynamic-tool-selection.md  reflexion-loop.md  trait-mock-testing.md  two-stage-generation.md
.claude/plan/: INDEX.md  adk-integration.md  agent-loop-split-validated.md  agent-side-tdd-enforcement-impl.md  agentfloor-ladder-mode-wiring-fix.md  agentfloor-prescreen-tier-fix.md  agentfloor-t6-kg-augmented-phase2.md  agentfloor-t6-weakness-improvement.md  agentfloor-tier-eval-impl.md  agenther-event-flow-fix.md  agenther-hindsight-relabel-impl.md  agenther-option-a-migration.md  agenther-runtime-integration-impl.md  agents-md-docs-knowledge-base.md  arag-hierarchical-retrieval-docs.md  assistant-message-event-emit-fix.md  baseline-tier-2026-04-29.md  beyond-pass1-rdc-vaf-impl.md  building-ai-coding-agents-gap-analysis.md  cached-backend-wrap-order-tests.md  cerememory-decay-port-impl.md  cerememory-extension-roadmap-d-g.md  cerememory-review-state-v12-impl.md  claudemd-archive-policy.md  claudemd-size-reduction-item-255-recreate.md  context-overflow-guard-impl.md  continuation-2026-04-25.md  critic-phase2-separate-backend-and-pre-tool-hook.md  critic-separate-llm-impl.md  crystallize-action-digest-impl.md  diffstore-rust-impl.md  disk-backed-compaction-checkpoint-impl.md  drift-monitor-lab-completion-hook.md  drift-monitor-weekly-gc.md  ds4-insights-port-impl.md  ds4-rax-skill-index-impl.md  dynamic-budget-phase6-kg-microtune.md  dynamic-budget-ratio-tune.md  dynamic-token-budget-compaction.md  dynamic-token-budget-phase5-axis-prune.md  (+86 more)
.github/workflows/: ci.yml
.serena/: project.yml
docs/: ARCHITECTURE_NOTES.md  DESIGN_SPEC.md  INDEX.md  THIRD_PARTY_LICENSES.md  VALUES.md
docs/architecture/: module-layer-rules.md  overview.md
docs/decisions/: ADR-001-claudemd-size-governance.md  ADR-002-scaffolding-over-model.md  ADR-003-paired-evidence-over-unpaired.md  ADR-004-defaulted-mutations.md  ADR-005-sqlite-vec-adopt-then-reject.md  (+7 more)
prompts/: critic.txt  heuristic_reflection.txt
scripts/: claudemd_archive.py  download_ternary.sh  dwq_offbox_runbook.md  g_mct2_smoke.sh  g_paired_262_v2.sh  g_paired_263_v2.sh  g_paired_265_v2.sh  lab_v17_paired.sh  lab_v17_paired_ttest.py  lab_v19_monitor.sh  lab_v19_on_only_gradient.py  lab_v19_paired.sh  lab_v19_paired_ttest.py  lab_v20_monitor.sh  lab_v20_paired.sh  lab_v20_paired_ttest.py  lab_v21_paired.sh  lab_v21_paired_ttest.py  lab_v21_smoke_paired.sh  lab_v22_aa_test.sh  lab_v22_metric.py  lab_v22_paired.sh  link-obsidian.sh  measure_prefix_cache_potential.py  setup_bitnet.sh  setup_mlx_ternary.sh  smoke_status.sh  start-mlx-server.sh  start-mlx-sidecar.sh  start-server.sh  test_claudemd_archive.py  test_lab_v19_on_only_gradient.py  test_lab_v20_paired_ttest.py  watch_revert.sh
src/: cancel.rs  config.rs  lib.rs  main.rs  mcp_server.rs  server.rs
tests/: drift_hook.sh  sqlite_vec_perf.rs  structural.rs
(+134 files in other folders)
