[package]
name = "bonsai-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"

# llama-cpp-2: PrismMLフォークとupstream llama-cpp-rsのAPI不整合のためHTTP方式にフォールバック
# llama-cpp-2 = { git = "https://github.com/k3-yamada/llama-cpp-rs", features = ["metal"] }
ureq = { version = "3", features = ["json"] }  # llama-server HTTP API + Web検索 + Ollama

rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 3で追加
# hf-hub = "0.5"
# sysinfo = "0.33"

# Phase 4で追加
# fastembed = "5"
# sqlite-vec = "0.1"
# zerocopy = "0.7"

# Phase 5で追加
# toml = "0.8"
# clap = { version = "4", features = ["derive"] }
# dirs = "6"
# tracing = "0.1"
# tracing-subscriber = "0.3"

# Phase 6で追加
# tokio = { version = "1", features = ["full"] }
