[package]
name = "bonsai-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
libc = "0.2"

[features]
default = []
embeddings = ["dep:fastembed"]

[dependencies.fastembed]
version = "5"
optional = true

# 将来追加予定
# hf-hub = "0.5"           # モデル自動DL
# sysinfo = "0.33"         # RAM検出
# fastembed = "5"           # EmbeddingGemma
# sqlite-vec = "0.1"       # ベクトル検索
# tracing = "0.1"          # 構造化ログ
# tokio = { version = "1", features = ["full"] }  # デーモンモード
