[package]
name = "bonsai-agent"
version = "0.1.0"
edition = "2024"
description = "Bonsai-8B 1-bit LLMで動作する自律型AIエージェント"
license = "MIT"
repository = "https://github.com/k3-yamada/bonsai-agent"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
ureq = { version = "3", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
libc = "0.2"

[features]
default = ["cli"]
cli = []
full = ["cli", "embeddings"]
embeddings = ["dep:fastembed"]

[dependencies.fastembed]
version = "5"
optional = true

# 将来追加予定
# hf-hub = "0.5"           # モデル自動DL
# sysinfo = "0.33"         # RAM検出
# fastembed = "5"           # EmbeddingGemma
# sqlite-vec = "0.1"       # ベクトル検索
# tracing = "0.1"          # 構造化ログ
# tokio = { version = "1", features = ["full"] }  # デーモンモード
